<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Moje Przepisy</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Strona główna</string>
    <string name="title_section2">Najwyzej oceniane</string>
    <string name="title_section3">Ostatnio dodane</string>
    <string name="przepis_dnia">Przepis dnia</string>
    <string name="title_activity_najwyzej_oceniane">Najwyzej Oceniane</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ostatnio_dodane">Ostatnio Dodane</string>
    <string name="title_activity_przepis">Moje Przepisy</string>
    <string name="title_activity_dodaj_przepis">Dodaj przepis</string>
    <string name="dodaj_tytul">Dodaj tytuł</string>
    <string name="dodaj_skladnik">Dodaj składnik</string>
    <string name="dotknij_aby_edytowac">Dotknij aby edytować</string>
    <string name="tytul">Tytuł:</string>
    <string name="skladniki">Składniki:</string>
    <string name="widoczny_dla_wszystkich">Widoczny dla wszystkich:</string>
    <string name="tak">Tak</string>
    <string name="nie">Nie</string>
    <string name="kategoria">Kategoria</string>
    <string name="trudnosc">Trudność</string>
    <string name="czas">Czas</string>
    <string name="dodatkowe_dane">Dodatkowe dane:</string>
    <string name="krok">Krok</string>
    <string name="nastepny_krok">Dodaj element</string>
    <string name="opis">Opis:</string>
    <string name="wyslij_przepis">Wyślij przepis</string>
    <string name="title_activity_wyswietl_przepis">Moje Przepisy</string>
    <string name="nieokreslony">Nieokreślony</string>
    <string name="sredni">Średni</string>
    <string name="ocen_przepis">Oceń przepis</string>
    <string name="twoja_ocena">Twoja ocena</string>
    <string name="szukaj_przepis">Szukaj przepis</string>
    <string name="szukaj">Szukaj</string>
    <string name="StworzKonto">Stwórz konto</string>
    <string name="TextViewLogin">Login:  (max: 12 znaków)</string>
    <string name="TextViewPassword">Hasło:</string>
    <string name="Mail">Mail:</string>
    <string name="powtorzHaslo">Powtórz hasło:</string>
    <string name="zgodnoscHasel"></string>
    <string name="wyczysc">Wyczyść</string>
    <string name="pseudonim">Pseudonim: (max: 20 znaków)</string>
    <string name="StworzButton">Stwórz</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="url_multi_complete">http://softpartner.pl/moje_przepisy/multi_complete.php</string>
    <string name="url_dodaj_przepis">http://softpartner.pl/moje_przepisy2/dodaj_przepis.php</string>
    <string name="url_edytuj_przepis">http://softpartner.pl/moje_przepisy2/edytuj_przepis.php</string>
    <string name="url_wszystkie_przepisy">http://softpartner.pl/moje_przepisy/wszystkie_przepisy.php</string>
    <string name="url_user_przepisy">http://softpartner.pl/moje_przepisy/user_przepisy.php</string>
    <string name="url_najwyzej_oceniane">http://softpartner.pl/moje_przepisy/najwyzej_oceniane.php</string>
    <string name="url_ostatnio_dodane">http://softpartner.pl/moje_przepisy/ostatnio_dodane.php</string>
    <string name="url_przepis">http://softpartner.pl/moje_przepisy/przepis.php</string>
    <string name="url_usun_przepis">http://softpartner.pl/moje_przepisy2/usun_przepis.php</string>
    <string name="url_ocen">http://softpartner.pl/moje_przepisy/ocen.php</string>
    <string name="url_rejestracja">http://softpartner.pl/moje_przepisy/rejestracja.php</string>
    <string name="url_logowanie">http://softpartner.pl/moje_przepisy/logowanie.php</string>
    <string name="url_aktywuj_konto">http://softpartner.pl/moje_przepisy/aktywuj_konto.php</string>
    <string name="url_szukaj_przepis">http://softpartner.pl/moje_przepisy/szukaj_przepis.php</string>
    <string name="url_ulubione">http://softpartner.pl/moje_przepisy/ulubione.php</string>
    <string name="url_pobierzUlubione">http://softpartner.pl/moje_przepisy2/pobierzUlubione.php</string>
    <string name="url_pobierz_przepis">http://softpartner.pl/moje_przepisy2/pobierzPrzepis.php</string>
    <string name="url_ile_przepisow">http://softpartner.pl/moje_przepisy2/ile_przepisow.php</string>
    <string name="url_ile_przepisow_user">http://softpartner.pl/moje_przepisy/ile_przepisow_user.php</string>
    <string name="url_moje_przepisy">http://softpartner.pl/moje_przepisy/user_przepisy.php</string>
    <string name="url_czyUlubiony">http://softpartner.pl/moje_przepisy2/url_czyUlubiony.php</string>
    <string name="zaloguj_sie">Zaloguj się</string>
    <string name="wybierz_kategorie">Wybierz kategorie</string>
    <string name="dodaj_przepis">Dodaj przepis</string>
    <string name="title_activity_lista_przepisy">Lista_przepisy</string>
    <string name="title_activity_rejestracja">RejestracjaActivity</string>
    <string name="losowy_przepis">Losowy przepis</string>
    <string name="login">Login</string>
    <string name="haslo">Hasło</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="ulubione">Ulubione</string>
    <string name="moje_przepisy">Moje przepisy</string>
    <string name="pseudonim_short">Pseudonim</string>
    <string name="title_activity_ulubione">MainActivity</string>

</resources>