<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="match_parent"
    android:background="@color/drawer_background"
    android:clickable="true"
    android:divider="@drawable/my_divider2"
    android:orientation="vertical"
    android:showDividers="middle" >

    <TextView
        android:id="@+id/drawer_zalogujsie_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/zaloguj_sie"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/drawer_login_module"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?android:attr/listPreferredItemHeightSmall"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/drawer_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:textColor="@color/white"
            android:textColorHighlight="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/drawer_haslo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/haslo"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <FrameLayout
            android:id="@+id/drawer_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="25dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/zaloguj"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/my_divider"
        android:dividerPadding="10dip"
        android:orientation="vertical"
        android:showDividers="middle" >

        <LinearLayout
            android:id="@+id/drawer_ulubione"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall" >

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/heart" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/ulubione"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/drawer_stworz_konto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="?android:attr/listPreferredItemHeightSmall" >

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:src="@android:drawable/ic_menu_add" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/StworzKonto"
                android:textColor="@color/white"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/wybierz_kategorie"
        android:textColor="@color/white" />

    <ListView
        android:id="@+id/drawer_wybierz_kategorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/my_divider"
        android:dividerPadding="10dip"
        android:showDividers="middle" >
    </ListView>

</LinearLayout>