<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/strona_glowna_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/strona_glowna_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/single_item_przepisID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/przepis_dnia"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <include
                android:id="@+id/include6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/single_item_przepisID"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                layout="@layout/przepis_maly_layout" />

            <LinearLayout
                android:id="@+id/zaloguj_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/include6"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_indicator"
                android:clickable="true" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_menu_login" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/zaloguj_sie"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Wybierz_kategorie_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/zaloguj_layout"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_indicator"
                android:clickable="true" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_all" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/wybierz_kategorie"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dodaj_przepis_linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Wybierz_kategorie_linearLayout"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_indicator"
                android:clickable="true" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_compose" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dodaj_przepis"
                    android:textSize="15dp" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>